--- a/LittleTacoShop/hours.html
+++ b/LittleTacoShop/hours.html
@@ -1,1 +1,65 @@
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="author" content="Srinidhi Bandi" />
+    <meta
+      name="description"
+      content="This page gives out the schedule of The Little Taco Shop"
+    />
+    <title>Little Taco Shop Hours</title>
+    <link rel="icon" href="img/taco.png" type="image/x-icon" />
+    <link rel="stylesheet" href="css/style.css" />
+  </head>
+
+  <body>
+    <header>
+      <h1>Little Taco Shop Hours</h1>
+      <nav>
+        <ul>
+          <li>
+            <a href="index.html">Home</a>
+          </li>
+          <li>
+            <a href="index.html#about">About LTS</a>
+          </li>
+          <li>
+            <a href="index.html#menu">Our Menu</a>
+          </li>
+          <li>
+            <a href="contact.html">Contact Us</a>
+          </li>
+        </ul>
+      </nav>
+
+      <figure>
+        <img
+          src="img/tacos_tray_400x267.png"
+          width="400"
+          height="267"
+          alt="tray of tacos"
+          title="A tray of tasty tacos!"
+        />
+        <figcaption>A Tray Of Tasty Tacos</figcaption>
+      </figure>
+    </header>
+    <hr />
+    <main>
+      <p>We are open 7 days a week!</p>
+      <dl>
+        <dt>Sunday-Thursday</dt>
+        <dd>11am-9pm</dd>
+        <dt>Friday-Saturday</dt>
+        <dd>11am-11pm</dd>
+      </dl>
+      <p>
+        <a href="#">Back to Top</a>
+      </p>
+    </main>
+    <hr />
+    <footer>
+      <p>Copyright &copy; The Little Taco Shop</p>
+    </footer>
+  </body>
+</html>
 
