--- a/LittleTacoShop/contact.html
+++ b/LittleTacoShop/contact.html
@@ -1,1 +1,106 @@
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="author" content="Srinidhi Bandi" />
+    <meta
+      name="description"
+      content="This page gives out the schedule of The Little Taco Shop"
+    />
+    <title>Little Taco Shop Hours</title>
+    <link rel="icon" href="img/taco.png" type="image/x-icon" />
+    <link rel="stylesheet" href="css/style.css" />
+  </head>
+
+  <body>
+    <header>
+      <h1>Contact Us</h1>
+      <nav>
+        <ul>
+          <li>
+            <a href="index.html">Home</a>
+          </li>
+          <li>
+            <a href="index.html#about">About LTS</a>
+          </li>
+          <li>
+            <a href="index.html#menu">Our Menu</a>
+          </li>
+          <li>
+            <a href="hours.html">Store Hours</a>
+          </li>
+        </ul>
+      </nav>
+      <figure>
+        <img
+          src="img/tacos_close_up_400x260.png"
+          width="400"
+          height="260"
+          alt="tacos close up image"
+          title="Tacos are delicious!"
+        />
+        <figcaption>Little Taco Shop Tacos</figcaption>
+      </figure>
+    </header>
+    <main>
+      <section>
+        <h2>Our Contact Form</h2>
+        <form action="https://httpbin.org/get" method="get">
+          <fieldset>
+            <legend>Send Us A Message</legend>
+            <p>
+              <label for="name">Name:</label>
+              <input
+                type="text"
+                name="name"
+                id="name"
+                placeholder="your name"
+                required
+              />
+            </p>
+            <p>
+              <label for="email">Email:</label>
+              <input
+                type="email"
+                name="email"
+                id="email"
+                placeholder="your email"
+                required
+              />
+            </p>
+            <p>
+              <label for="msg">Your Message:</label>
+              <br />
+              <textarea
+                name="msg"
+                id="msg"
+                cols="30"
+                rows="10"
+                placeholder="Type your message here"
+                autocomplete="on"
+              ></textarea>
+            </p>
+          </fieldset>
+          <button type="submit">Send</button>
+          <button type="reset">Reset</button>
+        </form>
+      </section>
+      <section>
+        <h2>Our Location</h2>
+        <address>
+          555 Taco Temptation Lane, Suite T Kansas City, MO 55555-5555
+          <br /><br />
+          Phone:
+          <a href="tel:+555-555-5555">555-555-5555</a>
+        </address>
+      </section>
+    </main>
+    <br />
+    <a href="#">Back to Top</a>
+    <hr />
+    <footer>
+      <p>Copyright &copy; The Little Taco Shop</p>
+    </footer>
+  </body>
+</html>
 
