--- a/LittleTacoShop/index.html
+++ b/LittleTacoShop/index.html
@@ -77,6 +77,9 @@
         </aside>
       </article>
       <hr />
+      <article id="menu">
+        <h2>Our Menu</h2>
+      </article>
       <table>
         <caption>
           Our Tacos
