--- a/LittleTacoShop/index.html
+++ b/LittleTacoShop/index.html
@@ -16,7 +16,7 @@
     <header>
       <h1>Welcome to The Little Taco Shop</h1>
       <nav>
-        <ul>
+        <ul class="links">
           <li>
             <a href="#about"
               >About <abbr title="The Little Taco Shop">LTS</abbr></a
