--- a/LittleTacoShop/hours.html
+++ b/LittleTacoShop/hours.html
@@ -16,7 +16,7 @@
     <header>
       <h1>Little Taco Shop Hours</h1>
       <nav>
-        <ul>
+        <ul class="links">
           <li>
             <a href="index.html">Home</a>
           </li>
