--- a/home.html
+++ b/home.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MythBusters</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="x-icon" href="hat.png" type="image/x-icon">
+    <link rel="icon" href="hat2.png" type="image/png">
 </head>
 <body>
 
@@ -17,11 +17,11 @@
             <span class="brand-name">MythBusters</span>
         </div>
         <div class="nav-right">
-                <a href="#explore" class="btn">Explore Myths</a>
+                <a href="explore.html" class="btn">Explore Myths</a>
                 <a href="#quiz" class="btn">Take Quiz</a>
         </div>
         <div class="nav-menu" id="navMenu">
-            <a href="#explore" class="btn">Explore Myths</a>
+            <a href="explore.html" class="btn">Explore Myths</a>
             <a href="#quiz" class="btn">Take Quiz</a>
         </div>
     </nav>
