--- a/home.html
+++ b/home.html
@@ -18,7 +18,7 @@
         </div>
         <div class="nav-right">
                 <a href="explore.html" class="btn">Explore Myths</a>
-                <a href="#quiz" class="btn">Take Quiz</a>
+                <a href="quiz.html" class="btn">Take Quiz</a>
         </div>
         <div class="nav-menu" id="navMenu">
             <a href="explore.html" class="btn">Explore Myths</a>
