--- a/explore.html
+++ b/explore.html
@@ -11,7 +11,7 @@ body {
   justify-content: center; /* Center content horizontally */
   align-items: center;
   min-height: 100vh;
-  background-color: #f4f4f4;
+  background-color: aqua;
 }
 
 .cards-container {
@@ -81,6 +81,10 @@ button {
   font-size: 16px;
   cursor: pointer;
 }
+button:hover{
+  color:cyan;
+  background-color: rgb(51, 45, 45);
+}
 @media screen and (max-width:1025px){
     .cards-container{
         display:grid;
@@ -142,6 +146,7 @@ button {
     }
 }
 </style>
+<link rel="icon" href="hat2.png" type="image/png">
 </head>
 <body>
 
@@ -149,14 +154,13 @@ button {
   <div class="flip-card">
     <div class="flip-card-inner">
       <div class="flip-card-front">
-        <p>Bull is a cat</p>
+        <p>Bats are blind.</p>
         <div class="container">
-          <button onclick="flipCard(this)">Flip Card</button>
+          <button onclick="flipCard(this)">Explore Fact</button>
         </div>
       </div>
-      <div class="flip-card-back">
-        <h1>John Doe</h1> 
-        <p>Bull is not a cat</p>
+      <div class="flip-card-back"> 
+        <p>Bats can see, but they rely on echolocation for navigation.</p>
       </div>
     </div>
   </div>
@@ -164,14 +168,13 @@ button {
   <div class="flip-card">
     <div class="flip-card-inner">
       <div class="flip-card-front">
-        <p>Bull is a cat</p>
+        <p>&nbsp;Goldfish have a 3-second memory.</p>
         <div class="container">
-          <button onclick="flipCard(this)">Flip Card</button>
+          <button onclick="flipCard(this)">Explore Fact</button>
         </div>
       </div>
       <div class="flip-card-back">
-        <h1>John Doe</h1> 
-        <p>Bull is not a cat</p>
+        <p>Goldfish can remember things for months.</p>
       </div>
     </div>
   </div>
@@ -179,14 +182,13 @@ button {
   <div class="flip-card">
     <div class="flip-card-inner">
       <div class="flip-card-front">
-        <p>Bull is a cat</p>
+        <p>We only use 10% of our brain.</p>
         <div class="container">
-          <button onclick="flipCard(this)">Flip Card</button>
+          <button onclick="flipCard(this)">Explore Fact</button>
         </div>
       </div>
       <div class="flip-card-back">
-        <h1>John Doe</h1> 
-        <p>Bull is not a cat</p>
+        <p>We use nearly all parts of our brain, even when resting.</p>
       </div>
     </div>
   </div>
@@ -194,14 +196,13 @@ button {
   <div class="flip-card">
     <div class="flip-card-inner">
       <div class="flip-card-front">
-        <p>Bull is a cat</p>
+        <p>&nbsp;Lightning never strikes the same place twice.</p>
         <div class="container">
-          <button onclick="flipCard(this)">Flip Card</button>
+          <button onclick="flipCard(this)">Explore Fact</button>
         </div>
       </div>
       <div class="flip-card-back">
-        <h1>John Doe</h1> 
-        <p>Bull is not a cat</p>
+        <p>Lightning often strikes the same place multiple times.</p>
       </div>
     </div>
   </div>
@@ -209,14 +210,13 @@ button {
   <div class="flip-card">
     <div class="flip-card-inner">
       <div class="flip-card-front">
-        <p>Bull is a cat</p>
+        <p>Cracking your knuckles causes arthritis.</p>
         <div class="container">
-          <button onclick="flipCard(this)">Flip Card</button>
+          <button onclick="flipCard(this)">Explore Fact</button>
         </div>
       </div>
       <div class="flip-card-back">
-        <h1>John Doe</h1> 
-        <p>Bull is not a cat</p>
+        <p>Cracking knuckles does not cause arthritis; it's just gas bubbles popping.</p>
       </div>
     </div>
   </div>
@@ -224,14 +224,13 @@ button {
   <div class="flip-card">
     <div class="flip-card-inner">
       <div class="flip-card-front">
-        <p>Bull is a cat</p>
+        <p>Humans have only five senses.</p>
         <div class="container">
-          <button onclick="flipCard(this)">Flip Card</button>
+          <button onclick="flipCard(this)">Explore Fact</button>
         </div>
       </div>
       <div class="flip-card-back">
-        <h1>John Doe</h1> 
-        <p>Bull is not a cat</p>
+        <p>We have more than five senses, including balance, temperature, and pain.</p>
       </div>
     </div>
   </div>
@@ -239,14 +238,13 @@ button {
   <div class="flip-card">
     <div class="flip-card-inner">
       <div class="flip-card-front">
-        <p>Bull is a cat</p>
+        <p>Bulls hate the color red.</p>
         <div class="container">
-          <button onclick="flipCard(this)">Flip Card</button>
+          <button onclick="flipCard(this)">Explore Fact</button>
         </div>
       </div>
       <div class="flip-card-back">
-        <h1>John Doe</h1> 
-        <p>Bull is not a cat</p>
+        <p>Bulls are colorblind to red; they react to movement, not color.</p>
       </div>
     </div>
   </div>
@@ -254,14 +252,13 @@ button {
   <div class="flip-card">
     <div class="flip-card-inner">
       <div class="flip-card-front">
-        <p>Bull is a cat</p>
+        <p>Using a microwave destroys nutrients in food.</p>
         <div class="container">
-          <button onclick="flipCard(this)">Flip Card</button>
+          <button onclick="flipCard(this)">Explore Fact</button>
         </div>
       </div>
       <div class="flip-card-back">
-        <h1>John Doe</h1> 
-        <p>Bull is not a cat</p>
+        <p> Microwaving preserves nutrients better than boiling.</p>
       </div>
     </div>
   </div>
